# sdl_playground

./: CMakeLists.txt
src/: director.cpp  director.h  main.cpp  node.cpp  node.h  nodedrawable.cpp  texturemanager.cpp  texturemanager.h
src/utils/: clock.h
